<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="logo">Logo</string>

    <string name="problem_connection">Koneksi Bermasalah</string>
    <string name="product">Product</string>
    <string name="categories">Categories</string>
    <string name="voucher">Voucher</string>
    <string name="history_transaction">History Transaction</string>
    <string name="tracking_order">Tracking Order</string>
    <string name="check_up">Check Up</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="show_more">Show More</string>

</resources>
