<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/popular_movies" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/voucher" />
        <item
            android:id="@+id/nav_history_transaction"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/history_transaction" />
        <item
            android:id="@+id/nav_tracting_order"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/tracking_order" />
        <item
            android:id="@+id/nav_store_location"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Store Location" />
        <item
            android:id="@+id/nav_voucher"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/voucher" />
        <item
            android:id="@+id/nav_check_up"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/check_up" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/logout" />
    </group>
</menu>
